<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_banner"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
       
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Group
            android:id="@+id/section_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="director,director_label,title,poster"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/margin_start"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            app:layout_goneMarginEnd="16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ffff"/>
        
        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/murat_mamedov"
            app:layout_constraintStart_toEndOf="@id/director_label"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title,poster,director_label,director"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />
        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/actor"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/actors_label"
            app:constraint_referenced_ids="actor_1,actor_2,actor_3,actor_4"
            app:flow_wrapMode="chain"
            app:flow_horizontalBias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_horizontalStyle="packed"
            app:flow_lastVerticalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_verticalGap="8dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/actor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Actor"
            android:text="@string/actor_1"

            />

        <TextView
            android:id="@+id/actor_2"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_2"
            />

        <TextView
            android:id="@+id/actor_3"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_3"
            />

        <TextView
            android:id="@+id/actor_4"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_4"
            />
        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintTop_toBottomOf="@id/actors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/watch"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/watch"
            app:layout_goneMarginEnd="0dp"
            app:layout_goneMarginStart="0dp"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/actors"
            app:layout_constraintStart_toEndOf="@id/like"
            />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/share"
            app:layout_goneMarginStart="0dp"
            app:layout_constraintTop_toBottomOf="@id/actors"
            app:layout_constraintStart_toEndOf="@id/watch"
            app:layout_constraintEnd_toEndOf="parent"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>